--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@
   --fs-20: 1.25rem;
 
   --ff: "Barlow Semi Condensed";
+
+  --max-width-mobile: 20.438rem;
+  --max-width-tablet: 40rem;
+  --max-width-desktop: 69.375rem;
 }
 
 @font-face {
@@ -82,10 +86,9 @@ h6 {
 }
 
 body {
-  font-size: 10px;
   font-family: Barlow Semi Condensed;
   font-weight: 500;
-  max-width: 20.438rem;
+  max-width: var(--max-width-mobile);
   min-height: 100svh;
   margin: 4.438rem auto;
   background-color: var(--clr-neutral-two);
@@ -156,7 +159,6 @@ body {
 
 .blog__article:nth-child(1) .blog__text {
   color: var(--clr-neutral-one);
-  max-width: 15.438rem;
 }
 
 .blog__article:nth-child(1) {
@@ -193,4 +195,100 @@ body {
 }
 .attribution a {
   margin-left: 0.188rem;
+}
+
+@media only screen and (min-width: 30rem) {
+  body {
+    max-width: var(--max-width-tablet);
+  }
+
+  .blog {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+  }
+
+  .blog__article:nth-child(1) {
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+  .blog__article:nth-child(2) {
+    grid-column: 3/5;
+    grid-row: 1/2;
+  }
+
+  .blog__article:nth-child(3) {
+    grid-column: 3/5;
+    grid-row: 2/3;
+  }
+  .blog__article:nth-child(4) {
+    grid-column: 3/5;
+    grid-row: 3/5;
+  }
+  .blog__article:nth-child(5) {
+    grid-column: 1/3;
+    grid-row: 3/5;
+  }
+}
+
+@media only screen and (min-width: 66.563rem) {
+  body {
+    max-width: var(--max-width-desktop);
+  }
+
+  .blog {
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: 17.75rem 16.625rem;
+    row-gap: 1.5rem;
+    column-gap: 1.875rem;
+  }
+
+  .blog__article:nth-child(1) {
+    grid-column: 1/5;
+    grid-row: 1/2;
+  }
+
+  .blog__article:nth-child(1) .blog__title {
+    margin-bottom: 1rem;
+  }
+
+  .blog__article:nth-child(2) {
+    grid-column: 5/7;
+    grid-row: 1/2;
+  }
+
+  .blog__article:nth-child(3) {
+    grid-column: 1/3;
+    grid-row: 2/3;
+  }
+  .blog__article:nth-child(4) {
+    grid-column: 3/7;
+    grid-row: 2/3;
+  }
+  .blog__article:nth-child(5) {
+    grid-column: 7/9;
+    grid-row: 1/3;
+  }
+
+  .blog__article:nth-child(1) {
+    background-position: 82% 0%;
+  }
+
+  .blog__article:nth-child(3),
+  .blog__article:nth-child(4),
+  .blog__article:nth-child(5) {
+    padding: 1.625rem 2rem;
+  }
+
+  .blog__article:nth-child(1) .blog__text,
+  .blog__article:nth-child(2) .blog__text {
+    margin-top: 1rem;
+  }
+
+  .blog__article:nth-child(3) .blog__text,
+  .blog__article:nth-child(4) .blog__text,
+  .blog__article:nth-child(5) .blog__text {
+    margin-top: 1.5rem;
+  }
 }
