--- a/styles.css
+++ b/styles.css
@@ -146,8 +146,6 @@ body {
   opacity: 70%;
 }
 
-/* Daniel */
-
 .blog__article:nth-child(1) .blog__img,
 .blog__article:nth-child(4) .blog__img {
   border: solid 2px var(--clr-five);
@@ -200,13 +198,13 @@ body {
 @media only screen and (min-width: 30rem) {
   body {
     max-width: var(--max-width-tablet);
+    align-content: center;
   }
 
   .blog {
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
   }
 
   .blog__article:nth-child(1) {
