--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,18 @@ body {
   margin-left: 0.188rem;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 @media only screen and (min-width: 30rem) {
   body {
     max-width: var(--max-width-tablet);
