--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ body {
   font-weight: 500;
   max-width: var(--max-width-mobile);
   min-height: 100svh;
-  margin: 4.438rem auto;
+  margin-inline: auto;
   background-color: var(--clr-neutral-two);
 }
 
